syntax = "proto3"; 
//protoc --go_out=. message.proto
package protocol;

message Payload {
  //address base58 encoded
  string creator = 1;
  string previous = 2;
  int64  balance = 3;
  bytes signature = 4;
}

message SendUnit {
  Payload payload = 1;
}

message RecvUnit {
  Payload payload = 1;
  string other = 2;
}

//for test usage
message VoteRequest {
  string conflictUnit1 = 1;
  string confilictUnit2 = 2;
}

message VoteResponse {
  string conflictUnit1 = 1;
  string confilictUnit2 = 2;
}

message ReplicationRequest {

}

message ReplicationResponse {
  
}

message HeartbeatRequest {

}

message HeartbeatResponse {
  
}

//for test usage
message TestMessage {
  string message = 1;
  int32 length = 2;
  int32 cnt = 3;
}